--- a/src/compoments/Compoment/Message.scss
+++ b/src/compoments/Compoment/Message.scss
@@ -3,17 +3,11 @@
 }
 .mess-action{
     position: absolute;
-    bottom: 50px;
+    bottom: 10px;
     display: flex;
     width: 100%;
     &-input{
         width: 100%;
-        & input{
-            width: 80%;
-            border-radius: 20px;
-            font-size: 18px;
-            padding: 6px;
-        }
         &-icon{
             position: absolute;
             right: 70px;
@@ -41,4 +35,38 @@
         // display: none;
     }
 
+}
+
+.input {
+	font-size: 1.5em;
+	background: linear-gradient(21deg, #10abff, #1beabd);
+	padding: 3px;
+	display: inline-block;
+	border-radius: 9999em;
+	width: 80%;
+	> * {
+		display: inherit;
+		border-radius: inherit;
+		margin: 0;
+		border: none;
+		outline: none;
+		padding: 0 .325em;
+		transition: all .25s;
+		width: 100%;
+        height: 35px;
+		// fancy shadow styles when focussed
+		&:focus {
+			box-shadow: inset 0 0 0 2px #fff,
+				0 0 0 3px #fff,
+				3px -3px 9px #1beabd, 
+				-3px 3px 9px #10abff;
+		}
+	}
+}
+input {
+	font-family: inherit;
+	line-height:inherit;
+	color:#2e3750;
+	min-width:12em;
+    
 }
