--- a/src/compoments/Popup/popup.scss
+++ b/src/compoments/Popup/popup.scss
@@ -1,14 +1,15 @@
-label{
-    cursor: pointer;
+label {
+  cursor: pointer;
 }
-.post-img{
-    overflow: scroll;
-    height: 250px;
-    padding: 10px;
-    img{
-        width: 240px;
-        height: 220px;
-        padding-right: 10px;
-        object-fit: cover;
-    }
+.post-img {
+  overflow: scroll;
+  height: 400px;
+  padding: 10px;
+  width: auto;
+  img {
+    width: 240px;
+    height: 280px;
+    padding-right: 10px;
+    object-fit: contain;
+  }
 }
