thu hai hai mot thang ba

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@
 .App-link {
   color: #61dafb;
 }
-a{
+a {
   text-decoration: none;
 }
 @keyframes App-logo-spin {
@@ -39,4 +39,6 @@ a{
   }
 }
 
-
+p {
+  color: #000;
+}
