--- a/src/containers/HomePage/Home/Home.scss
+++ b/src/containers/HomePage/Home/Home.scss
@@ -10,4 +10,24 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
+  margin-bottom: 30px;
+}
+.home-comment-icon {
+  font-size: 15px;
+  margin-left: 5px;
+}
+.cart-list-comment {
+  margin-top: 10px;
+}
+@media only screen and (max-width: 740px) {
+  .div-home-image {
+    grid-template-columns: 1fr;
+  }
+  .cart-list-comment {
+    display: none;
+  }
+}
+.css-et1ao3-MuiTypography-root {
+  font-size: 20px !important;
+  font-weight: 600 !important;
 }
