--- a/src/containers/HomePage/Home/Home.scss
+++ b/src/containers/HomePage/Home/Home.scss
@@ -11,6 +11,13 @@
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   margin-bottom: 30px;
+  margin-top: 10px;
+}
+.div-home-image-one {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  margin-top: 10px;
 }
 .home-comment-icon {
   font-size: 15px;
