--- a/src/layouts/Layout.scss
+++ b/src/layouts/Layout.scss
@@ -1,4 +1,7 @@
-.mess-body{
-    height: 100vh; 
-    overflow: hidden;
+.mess-body {
+  height: 100vh;
+  overflow: hidden;
+}
+.mess-header {
+  text-align: center;
 }
