--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -12,9 +12,12 @@
       display: none;
     }
     .logo {
+      display: flex;
+      align-items: center;
       img {
         width: 50px;
         height: 50px;
+        margin-right: 10px;
       }
     }
   }
