--- a/src/compoments/Compoment/Message.scss
+++ b/src/compoments/Compoment/Message.scss
@@ -97,6 +97,16 @@ input {
     cursor: pointer;
   }
 }
+.post-modal-header {
+  text-align: center;
+  & span {
+    font-size: 20px;
+    font-weight: 700;
+  }
+}
+.icon-feel {
+  margin: 0 !important;
+}
 @media only screen and (min-width: 1024px) {
   .list-homepage {
     // display: none;
