--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -1,7 +1,7 @@
 .header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  justify-items: center;
+  justify-items: baseline;
   align-items: center;
   // padding-top: 15px;
   // box-shadow: -1px 1px 1px 0.5px #372b3b inset;
