--- a/src/Profile/Profile.scss
+++ b/src/Profile/Profile.scss
@@ -16,11 +16,20 @@
   justify-content: space-around;
   align-items: center;
   &-img {
+    width: 157px;
+    height: 17px;
     position: relative;
     & img {
       border-radius: 100px;
       border: 1px solid seagreen;
       margin-right: 15px;
+      position: absolute;
+      top: -180px;
+      z-index: 1000;
+      left: -30px;
+      width: 175px;
+      height: 175px;
+      object-fit: cover;
     }
     &-icon {
       position: absolute;
@@ -67,7 +76,11 @@
 .profile-label {
   position: absolute;
   bottom: 0;
-  right: 0px;
+  right: 25px;
   background-color: #e0e0e0;
   border-radius: 100px;
+  z-index: 10000;
+}
+input {
+  display: none;
 }
