complete friend part 2

--- a/src/layouts/Layout.scss
+++ b/src/layouts/Layout.scss
@@ -1,6 +1,10 @@
 .mess-body {
   height: 100vh;
   overflow: hidden;
+  padding-left: 200px;
+  padding-right: 200px;
+  background-color: #f0f2f5;
+  max-width: 1920px;
 }
 .mess-header {
   text-align: center;
